# haskell-conf

./: .gitignore  LICENSE  README.md  conf.cabal  fig.cabal
src/: Fig.hs  example.hs
src/Data/: Conf.hs
src/Data/Conf/: Parser.hs
src/Fig/: Parser.hs
tests/: UnitTests.hs
tools/: generate-readme.hs
